# lab3

./: CMakeLists.txt
Project1lab3/: Project1lab3.sln
Project1lab3/Project1lab3/: BracketChecker.h  Calculator.h  Evaluator.h  ExpressionCalculator.h  Lexer.h  Parser.h  Project1lab3.vcxproj  Project1lab3.vcxproj.filters  Queue.h  Stack.h  Syntaxer.h  Token.h  main.cpp
Project1lab3/Project1lab3/x64/Debug/: Project1lab3.exe.recipe  Project1lab3.ilk  vc143.idb
Project1lab3/Project1lab3/x64/Debug/Project1lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1lab3.lastbuildstate  (+4 more)
include/: BracketChecker.h  Calculator.h  ExpressionCalculator.h  Lexer.h  Parser.h
samples/: CMakeLists.txt
sln/Debug/: gtest.idb  gtest.lib  gtest.vcxproj.FileListAbsolute.txt  sample_utmatrix.exe.recipe  sample_utmatrix.ilk  sample_utmatrix.vcxproj.FileListAbsolute.txt  test_utmatrix.exe.recipe  test_utmatrix.ilk  test_utmatrix.vcxproj.FileListAbsolute.txt  vc143.idb
sln/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate
sln/Debug/sample_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
sln/Debug/test_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test/: CMakeLists.txt  test_postfixcalculator.cpp
